<resources>
    <string name="app_name">MyFilmDatabase</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="search_title">Actor name</string>
    <string name="submitted">Search completed!</string>
    <string name="hint">Actor/Actress</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Title</string>
    <string name="filmrate">filmRate</string>
    <string name="film_critics_rate">Film critics rate:</string>
    <string name="add_film">Add Film</string>
    <string name="director">Director</string>
    <string name="protagonist">Protagonist</string>
    <string name="country">Country</string>
    <string name="year">Year</string>
</resources>
